# mimalloc_rust

./: Cargo.toml  README.md
.github/workflows/: ci.yml
libmimalloc-sys/: Cargo.toml  build.rs
libmimalloc-sys/src/: extended.rs  lib.rs
libmimalloc-sys/sys-test/: Cargo.toml  build.rs
libmimalloc-sys/sys-test/src/: main.rs
src/: lib.rs
test-override-with-dylib/: Cargo.toml
