[package]
name = "bc-mimalloc"
version = "0.2.0"
authors = [
    "Octavian Oncescu <octavonce@gmail.com>",
    "Vincent Rouillé <vincent@speedy37.fr>",
    "Thom Chiovoloni <chiovolonit@gmail.com>",
    "Evan Cameron <cameron.evan@gmail.com>",
]
edition = "2018"
repository = "https://github.com/leshow/mimalloc_rust"
keywords = ["mimalloc", "allocator", "encrypted-heap", "performance"]
categories = ["memory-management", "api-bindings"]
description = "Performance and security oriented drop-in allocator (updated to v2.3.0 and v3.3.0, respectively)"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "libmimalloc-sys",
    "libmimalloc-sys/sys-test",
    "test-override-with-dylib",
]

[badges]
travis-ci = { repository = "purpleprotocol/mimalloc_rust" }

[dependencies]
libmimalloc-sys = { package = "bc-libmimalloc-sys", path = "libmimalloc-sys", version = "0.2.0", default-features = false }

[features]
default = ["v3"]
secure = ["libmimalloc-sys/secure"]
override = ["libmimalloc-sys/override"]
debug = ["libmimalloc-sys/debug"]
debug_in_debug = ["libmimalloc-sys/debug_in_debug"]
local_dynamic_tls = ["libmimalloc-sys/local_dynamic_tls"]
no_thp = ["libmimalloc-sys/no_thp"]
extended = ["libmimalloc-sys/extended"]
v3 = ["libmimalloc-sys/v3"]
