[package]
name = "libmimalloc-sys-test"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
edition = "2018"
description = "Bindings test for libmimalloc-sys"
license = "MIT"
publish = false

[dependencies]
libmimalloc-sys = { package = "bc-libmimalloc-sys", path = ".." }
libc = "0.2"

[build-dependencies]
ctest2 = "0.4"

[features]
secure = ["libmimalloc-sys/secure_level_4"]
secure_level_1 = ["libmimalloc-sys/secure_level_1"]
secure_level_2 = ["libmimalloc-sys/secure_level_2"]
secure_level_3 = ["libmimalloc-sys/secure_level_3"]
secure_level_4 = ["libmimalloc-sys/secure_level_4"]
secure_level_5 = ["libmimalloc-sys/secure_level_5"]
extended = ["libmimalloc-sys/extended"]
v3 = ["libmimalloc-sys/v3"]
